<resources>
    <string name="app_name">Android_Rave_Controller</string>
    <string name="app_name_alt">Rave LED Controller</string>
    <string name="welcome_message">STARTING LED RAVE CONTROLLER</string>
    <string name="version">V 1.0</string>
    <string name="author">The Maker Matt</string>
    <string name="contact">Matthew@butlerbaker.com</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="programmer_logo_desc">Programmer Logo</string>
    <string name="continue_button_text">Continue</string>
    <string name="add_hardware_bt">Search for Bluetooth Devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_segments">Segments</string>
</resources>